# ai-agent-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AI Agent (Notepad).md  AI_Agent_Platform_Project_Plan.md  Prompt_test_case_generator.txt  README.md  TAMS - AI Assist_ Prompt Version History.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  llm_test.html  pyproject.toml
.amazonq/rules/: Always_read_AI_Agent_Platform_Project_Plan_before_taking_any_action_and_update_the_same_doc_after.md
ai-agent-platform/: .env.example  .gitignore  .pre-commit-config.yaml  COLIMA_SETUP.md  Dockerfile  GITHUB_SETUP.md  README.md  ai-agent-platform.bundle  alembic.ini  complete_frontend.html  deploy.sh  docker-compose.yml  frontend_simple.html  platform.html  pyproject.toml  quick_start.py  quick_start_frontend.py  run.sh  run_colima.sh  run_local.py  run_platform.py  run_tams.py  run_tams_onegpt.py  start_api_only.py  start_frontend.py  start_tams_web.py  tams_demo.html  tams_live_demo.html  test_custom_llm.py  test_onegpt.py  web_demo.py
ai-agent-platform/docs/: ARCHITECTURE.md  DEPLOYMENT.md  FLOWISE_TAMS_GUIDE.md  TAMS_USAGE.md
ai-agent-platform/frontend/: package.json
ai-agent-platform/frontend/app/: layout.tsx  page.tsx
ai-agent-platform/frontend/components/: AgentDashboard.tsx  TAMSAnalysis.tsx
ai-agent-platform/integrations/flowise/: docker-compose.flowise.yml
ai-agent-platform/src/: __init__.py
ai-agent-platform/src/agents/: assistive_agent.py  automation_agent.py  base.py  enhanced_assistive.py  enhanced_automation.py  tams_agent.py
ai-agent-platform/src/api/: main.py  schemas.py
ai-agent-platform/src/api/routers/: agents.py  crews.py  evaluation.py  executions.py  flowise.py  health.py  rag.py  tams.py  tools.py  workflows.py
ai-agent-platform/src/core/: database.py  evaluation.py  graph.py  llm.py  llm_client.py  memory.py  models.py  prompts.py  rag.py
ai-agent-platform/src/integrations/: crewai.py  flowise.py
ai-agent-platform/src/tools/: api_tool.py  base.py  database_tool.py  email_tool.py  file_tool.py  registry.py
ai-agent-platform/tests/: conftest.py
ai-agent-platform/tests/integration/: test_api.py  test_tams_api.py
ai-agent-platform/tests/unit/: test_agents.py  test_tams_agent.py  test_tools.py
ai-agent-platform/workflows/: tams_flowise_workflow.json
alembic/: env.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: database_schema.md
frontend/: package.json
scripts/: init_db.py
(+11 files in other folders)
